# sika

./: .gitignore  README.md  pyproject.toml  pytest.ini
docs/: api.rst  conf.py  config_api.rst  guides.rst  index.rst  installation.rst  store_api.rst  utils_api.rst
docs/topics/implementations/: general_implementations.rst  index.rst  spectroscopy_api.rst
docs/topics/modeling/: constraint_api.rst  dataset_api.rst  index.rst  modeling_guide.rst  parameter_api.rst  parameter_set.rst  prior_api.rst  sampler_api.rst
docs/topics/pipelines/: index.rst  pipeline_guide.rst  product_api.rst  provider_api.rst  task_api.rst
examples/: gizmo_workshop.ipynb  workshop_config.toml
sika/: __init__.py  product.py  product_iterator.py  provider.py  store.py  task.py  utils.py
sika/config/: .gitignore  __init__.py  config.py  logging_nofile.json  paths.py  utils.py
sika/implementations/general/: __init__.py  aggregators.py  caches.py  metadata.py  middleware.py  product_iterators.py
sika/implementations/rv/: RV.py  __init__.py  binary_sampler.py  kepler.py  keplerian_binary.py
sika/implementations/spectroscopy/: BTSettl.py  __init__.py  companion_params.py  composite_binary_model.py  crires.py  crires_loader.py  flux.py  pRT.py  (+11 more)
sika/modeling/: __init__.py  constraint.py  data.py  joint_fit_sampler.py  loss.py  models.py  parameter_set.py  params.py  priors.py  sampler.py
tests/: relative_param_model.py  test_constraints.py  test_coordinate_order.py  test_grid_companion_model_param_order.py  test_mpi.py  test_parameter_set.py  test_parameters.py  test_sampler_guess.py
(+42 files in other folders)
